--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "area": [31.4013056639, 120.2321805150, 31.6006740928, 120.4074773884],
     "range": [8, 12],
-    "types": ["街道图", "卫星图"],
+    "types": ["normal", "sate", "mix"],
     "theme": "dark"
 }
